--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -19,6 +19,8 @@
   "Перезагрузить": "Перезагрузить",
   "Полезные страницы": "Полезные страницы",
   "Насчет нас": "Насчет нас",
-  "1 ноября 2019 года интернет-издание «EFFECT.UZ» зарегистрировано в качестве электронного средства массовой информации в Агентстве информации и массовых коммуникаций при Администрации Президента Республики Узбекистан. Номер сертификата: 1323. Учредитель: ООО «ЭФФЕКТУЗБЕК» Руководитель сайта: Акмалхан Эшонханов Электронный адрес: www.effect.uz@gmail.com Адрес редакции: 100016, г.Ташкент, Яшнабадский район, улица Махтумкули 26. Копирование, распространение и иные формы использования материалов, опубликованных на сайте EFFECT.UZ, осуществляются только с письменного согласия редакции.": "1 ноября 2019 года интернет-издание «EFFECT.UZ» зарегистрировано в качестве электронного средства массовой информации в Агентстве информации и массовых коммуникаций при Администрации Президента Республики Узбекистан. Номер сертификата: 1323. Учредитель: ООО «ЭФФЕКТУЗБЕК» Руководитель сайта: Акмалхан Эшонханов Электронный адрес: www.effect.uz@gmail.com Адрес редакции: 100016, г.Ташкент, Яшнабадский район, улица Махтумкули 26. Копирование, распространение и иные формы использования материалов, опубликованных на сайте EFFECT.UZ, осуществляются только с письменного согласия редакции."
+  "поиск по всему сайту": "поиск по всему сайту"
+
+
 
 }
